Add missing elements to home page

--- a/src/app/pages/home/banners/astronomy/astronomy.hbs
+++ b/src/app/pages/home/banners/astronomy/astronomy.hbs
@@ -12,7 +12,7 @@
     <div class="square-3"></div>
     <div class="square-4"></div>
 
-    <div class="btn btn-large now-i-can">
+    <div class="now-i-can">
         <span>Now I can</span>
         <span class="quote">Dream as Far as I can see</span>
     </div>
