--- a/src/app/pages/home/banners/us-history/us-history.hbs
+++ b/src/app/pages/home/banners/us-history/us-history.hbs
@@ -13,7 +13,7 @@
     <div class="square-3"></div>
     <div class="square-4"></div>
 
-    <div class="btn btn-large now-i-can">
+    <div class="now-i-can">
         <span>Now I can</span>
         <span class="quote">Travel back in time</span>
     </div>
