--- a/src/app/pages/home/banners/us-history/us-history.scss
+++ b/src/app/pages/home/banners/us-history/us-history.scss
@@ -125,6 +125,7 @@
         line-height: 7.064vw;
         padding: 0;
         position: absolute;
+        text-align: center;
         text-transform: none;
         top: 33.8484vw;
         width: 42.09vw;
