--- a/src/app/pages/home/home.hbs
+++ b/src/app/pages/home/home.hbs
@@ -4,5 +4,8 @@
 <div class="home-page">
     <main id="maincontent">
         <div class="book-banner"></div>
+        <div class="quote-buckets"></div>
+        <div class="education"></div>
+        <div class="buckets"></div>
     </main>
 </div>
