--- a/src/styles/mixins/responsive.scss
+++ b/src/styles/mixins/responsive.scss
@@ -17,3 +17,9 @@
         @content;
     }
 }
+
+@mixin widescreen {
+    @media (min-width: #{breakpoints(desktop) + 1}) {
+        @content;
+    }
+}
