--- a/src/app/pages/home/banners/astronomy/astronomy.scss
+++ b/src/app/pages/home/banners/astronomy/astronomy.scss
@@ -113,6 +113,7 @@
         line-height: 7.064vw;
         padding: 0;
         position: absolute;
+        text-align: center;
         text-transform: none;
         top: 33.8484vw;
         width: 49.5vw;
