--- a/src/app/pages/home/banners/chemistry/chemistry.scss
+++ b/src/app/pages/home/banners/chemistry/chemistry.scss
@@ -98,6 +98,7 @@
         line-height: 7.064vw;
         padding: 0;
         position: absolute;
+        text-align: center;
         text-transform: none;
         top: 33.8484vw;
         width: 28.6vw;
