--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -25,7 +25,7 @@
                 <span class="logo-quote">Access. The future of education.</span>
               </span>
         <ul class="nav-menu" id="main-nav">
-          <li class="nav-menu-item parent"><a href="/subjects">Subjects</a>
+          <li class="nav-menu-item parent"><span class="back"></span><a href="/subjects">Subjects</a>
             <ul class="secondary-nav">
               <li class="nav-menu-item"><a href="/subjects/all">All</a></li>
               <li class="nav-menu-item"><a href="/subjects/math">Math</a></li>
@@ -37,7 +37,7 @@
           </li>
           <li class="nav-menu-item"><a href="/higher-ed">Higher Education</a></li>
           <li class="nav-menu-item"><a href="/k-12">K-12</a></li>
-          <li class="nav-menu-item parent"><a href="/our-impact">Our Impact</a>
+          <li class="nav-menu-item parent"><span class="back"></span><a href="/our-impact">Our Impact</a>
             <ul class="secondary-nav">
               <li class="nav-menu-item"><a href="/success-stories">Success Stories</a></li>
               <li class="nav-menu-item"><a href="/our-team">Our Team</a></li>
