--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -393,11 +393,12 @@
         flex: 1 100%;
         order: 3;
         margin: 1.5rem 0 0;
+        //transform: translate3d(0, 0, 0);
 
         @include small {
           @at-root .active.open#{&} {
-            transform: translate3d(-1000px, 0, 0);
-            transition: transform 0.5s;
+            transform:translate3d(-1000px, 0, 0);
+            transition: transform 0.2s;
           }
         }
 
@@ -434,6 +435,63 @@
             @include medium-up {
               position: relative;
             }
+            &.open {
+              @include small {
+                @at-root .active.open#{&} {
+                  position: absolute;
+                  top: 0px;
+                  transform: translate3d(1000px,0,0);
+                  transition: transform;
+                }
+              }
+              .back {
+                @include small {
+                  @at-root .active.open#{&} {
+                    width: 27px;
+                    height: 26px;
+                    text-indent: -9999px;
+                    position: absolute;
+                    left:-27px;
+                    top: 50%;
+                    transform:translate3d(0,-13px,0);
+                    &::before,
+                    &::after {
+                      border-right: 2px solid;
+                      content: '';
+                      display: block;
+                      height: 10px;
+                      margin-top: -7px;
+                      position: absolute;
+                      transform: rotate3d(0,0,1,45deg);
+                      left: 5px;
+                      top: 50%;
+                      width: 0;
+                      cursor: pointer;
+                      transition: opacity 0s 0.6s;
+
+                    }
+
+                    &::after {
+                      margin-top: -1px;
+                      transform: rotate3d(0,0,1,135deg);
+                    }
+                  }
+                }
+              } // end .back
+              > a {
+                &::before,
+                &::after {
+                  @include small {
+                    @at-root .active.open#{&} {
+                      opacity: 0;
+                      transition: opacity 0s 0.2s;
+                    }
+                  }
+                }
+              }
+
+            }
+
             //dropdown
             &:hover .secondary-nav {
               @include medium-up {
@@ -457,17 +515,9 @@
         }
 
         .secondary-nav {
-          visibility: hidden;
           transform: scale3d(0,0,0);
           position: absolute;
-          top:0;
-
-          @include small {
-            @at-root .active.open#{&} {
-              visibility: visible;
-              transform: scale3d(1,1,1) translate3d(1000px,0,0);
-            }
-          }
+          top: 40px;
 
           @include medium-up {
             position: absolute;
@@ -480,7 +530,21 @@
             border-top: 4px solid #F0F0F0;
           }
 
+          &.open {
+            @include small {
+              @at-root .active.open#{&} {
+                transform: scale3d(1,1,1);
+                transition: transform 0.2s;
+              }
+            }
+          }
+
           .nav-menu-item {
+            @include small {
+              @at-root .active.open#{&} {
+                  opacity: 1;
+              }
+            }
             @include medium-up {
               white-space: nowrap;
               padding: 0;
@@ -508,36 +572,7 @@
             }
           }
 
-          .back {
-            @include small {
-              @at-root .active.open#{&} {
-                position: relative;
-                display: inline-block;
-                width: 27px;
-                height: 27px;
-                text-indent: -9999px;
-                &::before,
-                &::after {
-                  border-right: 2px solid;
-                  content: '';
-                  display: block;
-                  height: 10px;
-                  margin-top: -7px;
-                  position: absolute;
-                  transform: rotate3d(0,0,1,45deg);
-                  left: 5px;
-                  top: 50%;
-                  width: 0;
-                  cursor: pointer;
-                }
 
-                &::after {
-                  margin-top: -1px;
-                  transform: rotate3d(0,0,1,135deg);
-                }
-              }
-            }
-          } // end .back
         } //end .secondary-nav
 
       } //end .nav-menu
@@ -578,7 +613,7 @@
           //create middle line
           @include line;
           position: relative;
-          transition: background .3s .6s ease;
+          transition: background .3s .2s ease;
 
           /*create the upper and lower lines as pseudo-elements of the middle line*/
           &:before,
@@ -589,7 +624,7 @@
             content: '';
             //set transform origin back to center
             transform-origin: 50% 50%;
-            transition: top .3s .6s ease, transform .3s ease;
+            transition: top .3s .2s ease, transform .3s ease;
           }
           &:before { top: $button-size/4; }
           &:after { top: -$button-size/4; }
@@ -599,7 +634,7 @@
             background: transparent;
             &:before,
             &:after {
-              transition: top .3s ease, transform .3s .5s ease;
+              transition: top .3s ease, transform .3s .2s ease;
               top:0;
               width: $button-size;
             }
