Regularize form names
Make them “adoption” and “interest” in the file system as well as the
URL.
Also restore the use of forms.scss and eliminate their individual scss
files

--- a/src/app/components/get-this-title/get-this-title.scss
+++ b/src/app/components/get-this-title/get-this-title.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 .get-this-title {
-    background-color: white;
+    background-color: color(neutral-lightest);
 
     .option {
         color: color(cyan);
