--- a/src/app/pages/subjects/subjects.scss
+++ b/src/app/pages/subjects/subjects.scss
@@ -138,7 +138,7 @@ $text-black3: rgba(0, 0, 0, 0.54);
         }
 
         .book-info {
-            background-color: white;
+            background-color: color(neutral-lightest);
             height: 10rem;
             position: relative;
             z-index: 2;
