--- a/src/app/pages/adoption/adoption.hbs
+++ b/src/app/pages/adoption/adoption.hbs
@@ -1,4 +1,3 @@
-<style scoped>@import url(/app/pages/adoption-form/adoption-form.css);</style>
 <h1>OpenStax College Adoption Form</h1>
 <p>
     Future funding from the <a href="/about">generous foundation donors</a> who
@@ -113,7 +112,8 @@
     </label>
     <label>
         <span>Email address</span>
-        <input name="adoption[hint_email_address]" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text">
+        <input name="adoption[hint_email_address]" type="email"
+         pattern="[^@]+@([^@\.]+\.)+[^@\.]+">
     </label>
     <label>
         <span>Phone number</span>
