--- a/src/styles/components/buttons.scss
+++ b/src/styles/components/buttons.scss
@@ -29,7 +29,7 @@
 .cta > .btn {
     background-color: color(orange);
     border: 0;
-    color: white;
+    color: color(neutral-lightest);
     font-variant: small-caps;
     margin: 0 auto;
     padding: 1.5rem 2rem;
