--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,12 +4,13 @@
 
 // General overrides
 
-p, .btn {
-	margin: 1rem 0 0;
+p,
+.btn {
+    margin: 1rem 0 0;
 }
 
 .larger {
-	font-size: 2.4rem
+    font-size: 2.4rem;
 }
 
 html {
@@ -23,10 +24,10 @@ body {
     display: flex;
     flex-direction: column;
     font-size: 1.8rem;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
     margin: 0;
     min-height: 100vh;
-    -webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
 
     #main {
         display: flex;
@@ -34,8 +35,8 @@ body {
 
         > div {
             display: flex;
-            width: 100vw;
             flex-direction: column;
+            width: 100vw;
         }
     }
 }
