Revert "Fix eslint errors"
This reverts commit aa03f18a43ae64096c1435992b9103bba336a22b.

--- a/src/styles/mixins/line.scss
+++ b/src/styles/mixins/line.scss
@@ -1,8 +1,8 @@
 
 @mixin line {
-    background: #5e6062;
-    display: inline-block;
-    height: $button-size / 7;
-    transition: $transition;
-    width: $button-size;
+  display: inline-block;
+  width: $button-size;
+  height: $button-size/7;
+  background: #5E6062;
+  transition: $transition;
 }
