--- a/src/styles/variables/opposite-directions.scss
+++ b/src/styles/variables/opposite-directions.scss
@@ -1,24 +1,23 @@
 // Opposite Direction function
 @function opposite-direction($directions) {
-	$opposite-directions: ();
-	$direction-map: (
-		'top': 'bottom',
-		'right': 'left',
-		'bottom': 'top',
-		'left': 'right',
-		'ltr': 'rtl',
-		'rtl': 'ltr'
-	);
+    $opposite-directions: ();
+    $direction-map: (
+		  'top': 'bottom',
+		  'right': 'left',
+		  'bottom': 'top',
+		  'left': 'right',
+		  'ltr': 'rtl',
+		  'rtl': 'ltr'
+    );
 
-	@each $direction in $directions {
-		$opposite-direction: map-get($direction-map, $direction);
-		    @if $opposite-direction != null {
-		  $opposite-directions: append($opposite-directions, #{$opposite-direction});
-		}
-		@else {
-		  @warn "No opposite direction can be found for `#{$direction}`.";
-		}
-	}
+    @each $direction in $directions {
+        $opposite-direction: map-get($direction-map, $direction);
+        @if $opposite-direction != null {
+		        $opposite-directions: append($opposite-directions, #{$opposite-direction});
+        } @else {
+		      @warn "No opposite direction can be found for `#{$direction}`.";
+		    }
+	  }
 
-  @return $opposite-directions;
+    @return $opposite-directions;
 }
