Use data fetched from server
Updated subjects to fetch and display data from our server. CORS is an
issue (also, server may not have any data at a given time).
Plugged a little more dummy data into details page instead of flat HTML.

--- a/src/app/pages/subjects/category-section/book/book.hbs
+++ b/src/app/pages/subjects/category-section/book/book.hbs
@@ -1,4 +1,4 @@
-<img src="{{coverUrl}}" />
+<img src="{{coverUrl}}" alt="book cover" />
 <div class="tooltip">
     <div class="get-this-title-container"></div>
     <div class="cta">
