--- a/src/styles/variables/colors.scss
+++ b/src/styles/variables/colors.scss
@@ -80,7 +80,7 @@ $link-color-dark: color(primary);
 $background-color-light: color(neutral-lightest);
 $background-color-dark: color(neutral-dark);
 
-// Other things
+// Structural element colors
 $divider-gray: rgba(0, 0, 0, 0.12);
 
 $page-top-gradient: linear-gradient(to bottom,
