--- a/src/app/pages/subjects/subjects.hbs
+++ b/src/app/pages/subjects/subjects.hbs
@@ -21,5 +21,5 @@
     <div class="button-row">
         <div class="filter-buttons"></div>
     </div>
-    <div class="book-viewer" data-manager="book-viewer"></div>
+    <div class="book-viewer"></div>
 </div>
