--- a/src/app/pages/subjects/subjects.scss
+++ b/src/app/pages/subjects/subjects.scss
@@ -149,6 +149,7 @@ $text-black3: rgba(0, 0, 0, 0.54);
         }
 
         .cta {
+            font-size: large;
             padding: 2rem;
         }
     }
