--- a/src/styles/components/buttons.scss
+++ b/src/styles/components/buttons.scss
@@ -33,6 +33,7 @@
     font-variant: small-caps;
     margin: 0 auto;
     padding: 1.5rem 2rem;
+    text-transform: lowercase;
 }
 
 @each $name, $type in $os-colors {
