--- a/src/app/pages/home/buckets/buckets.hbs
+++ b/src/app/pages/home/buckets/buckets.hbs
@@ -2,7 +2,7 @@
     @import url(/app/pages/home/buckets/buckets.css);
 </style>
 <div class="bucket give right">
-    <img src="/images/home/buckets/give.jpg" width="480" height="300" />
+    <div class="image"></div>
     <div class="quote">
         <span class="title">Give</span>
         <span class="blurb">
@@ -15,7 +15,7 @@
 </div>
 
 <div class="bucket our-impact left">
-    <img src="/images/home/buckets/our-impact.jpg" width="480" height="300" />
+    <div class="image"></div>
     <div class="quote">
         <span class="title">Our Impact</span>
         <span class="blurb">
