--- a/src/styles/variables/responsive.scss
+++ b/src/styles/variables/responsive.scss
@@ -1,7 +1,6 @@
 $breakpoints: (
     phone: 480px,
-    tablet: 768px,
-    desktop: 1280px
+    tablet: 768px
 );
 
 @function breakpoints($breakpoint) {
