--- a/src/app/pages/home/banners/chemistry/chemistry.scss
+++ b/src/app/pages/home/banners/chemistry/chemistry.scss
@@ -1,6 +1,18 @@
 @import 'variables';
 @import 'mixins';
 
+@mixin desktop {
+    @media (min-width: 1025px) {
+        @content;
+    }
+}
+
+@mixin tablet {
+    @media (min-width: #{breakpoints(phone) + 1}) and (max-width: 1024px) {
+        @content;
+    }
+}
+
 .chemistry {
     background-image: url('/images/home/subjects/chemistry/background.jpg');
     background-position: center top;
@@ -12,13 +24,23 @@
     padding-top: 8rem;
     position: relative;
 
+    @include tablet {
+        background-size: 100vw 81.4vw;
+        height: 81.4vw;
+    }
+
     .square-1,
     .square-2,
     .square-3,
     .square-4 {
         background-color: rgba(color(orange), 0.2);
+        display: none;
         position: absolute;
         z-index: 0;
+
+        @include desktop {
+            display: block;
+        }
     }
 
     .square-1 {
@@ -60,11 +82,16 @@
 
     .element {
         background-image: url('/images/home/subjects/chemistry/element.png');
+        display: none;
         height: 8.57vw;
         left: 25.286vw;
         position: absolute;
         top: 17.857vw;
         width: 7.21vw;
+
+        @include desktop {
+            display: block;
+        }
     }
 
     .book {
@@ -76,6 +103,13 @@
         position: absolute;
         top: 7.726vw;
         width: 25.607vw;
+
+        @include tablet {
+            height: 36.46vw;
+            left: 25.32vw;
+            top: 18.35vw;
+            width: 36.46vw;
+        }
     }
 
     .video-banner {
@@ -86,6 +120,13 @@
         top: 22vw;
         width: 54.64vw;
         z-index: 2;
+
+        @include tablet {
+            height: 49.5vw;
+            left: 24.68vw;
+            top: 32vw;
+            width: 80.26vw;
+        }
     }
 
     .now-i-can {
@@ -104,6 +145,15 @@
         width: 28.6vw;
         z-index: 3;
 
+        @include tablet {
+            font-size: 3.8vw;
+            left: 3.29vw;
+            line-height: 10.76vw;
+            height: 10.76vw;
+            top: 55.82vw;
+            width: 42.91vw;
+        }
+
         .quote {
             display: inline-block;
             font-family: 'Permanent Marker', cursive;
@@ -117,6 +167,13 @@
             position: absolute;
             top: 5vw;
             width: 12vw;
+
+            @include tablet {
+                border-bottom-width: 0.36vw;
+                left: 22vw;
+                top: 8vw;
+                width: 19vw;
+            }
         }
     }
 
@@ -126,6 +183,11 @@
         position: absolute;
         top: 41.5vw;
         z-index: 3;
+
+        @include tablet {
+            left: 7.47vw;
+            top: 67.7vw;
+        }
 
         ul {
             list-style-type: none;
@@ -142,6 +204,12 @@
             height: 4.5vw;
             line-height: 4.5vw;
             padding: 0;
+
+            @include tablet {
+                font-size: 1.7vw;
+                height: 6.33vw;
+                line-height: 6.33vw;
+            }
         }
 
         .explore-subject,
@@ -152,10 +220,18 @@
         .explore-subject {
             margin-right: 0.2vw;
             width: 17.5vw;
+
+            @include tablet {
+                width: 25.32vw;
+            }
         }
 
         .explore-all {
             width: 18.55vw;
+
+            @include tablet {
+                width: 27.97vw;
+            }
         }
     }
 }
